接着上一版引入并测试了jquery和bootstrap的使用 需要注意的是：jquery不能用$，否则需要另外声明

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,5 @@
 <!--这是属性绑定的示例1-->
-<app-property-bind1></app-property-bind1>
+<!--<app-property-bind1></app-property-bind1>-->
+
+<!--演示引入的jquery和bootstrap是否生效-->
+<app-jquery-bootstrap></app-jquery-bootstrap>
