ng的内置指令的一些展示，较简单，所以例子也比较简略

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,4 +2,7 @@
 <!--<app-property-bind1></app-property-bind1>-->
 
 <!--演示引入的jquery和bootstrap是否生效-->
-<app-jquery-bootstrap></app-jquery-bootstrap>
+<!--<app-jquery-bootstrap></app-jquery-bootstrap>-->
+
+<!--接下来演示的是angular内置的一些指令的效果-->
+<app-ngcommand></app-ngcommand>
